Opened 6 months ago

Closed 6 months ago

#18967 closed bug (fixed)

Video playing not working starting with hrev57855

Reported by: andianton Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

There are two bugs generated by fixing bug #17851

  1. MediaPlayer and VLC cannot play some video files which can be played in hrev57843. In order to reproduce this bug, you can create a simple video file with ffmpeg, based on one png file and an mp3 audio file with:

ffmpeg -r 1 -loop 1 -i question.png -i 20240804_003109.mp3 -acodec copy -r 1 -shortest -vf scale=1280:720 test.mp4

Behavior: video doesnt work, audio works 3-4s and sound is chipping.

  1. Mednafen (games emulator) has now 1fps or something due to the same fix (code changes). Tested with different cores like .gbc, .srm, .sfc and .nes roms.

The code changes seems to have an impact on video players and emulator at the same time.

Note> Haiku is running on an ASUS laptop (x86_64) as a native operating system.

Change History (5)

comment:1 by andianton, 6 months ago

Please notice that hrev57843 (which can play well video files) is the previous version of hrev57855 (the one who doesn't work).

comment:2 by waddlesplash, 6 months ago

Keywords: video codec error vlc mediaplayer mednafen 1fps slow removed
Priority: highnormal
Version: R1/beta4R1/Development

There are two bugs generated by fixing bug #17851

There is pretty much no way these problems are created by the fix to #18951 (I guess this is a typo.) The hrev range you specified has a lot more changes than just that fix, one of these is likely to blame.

comment:3 by waddlesplash, 6 months ago

I think the only real candidate here is hrev57854~1.

comment:4 by waddlesplash, 6 months ago

Component: - GeneralSystem/Kernel

comment:5 by waddlesplash, 6 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev57916.

Note: See TracTickets for help on using tickets.